version/0.31/_sources/api/solver/_autosummary/settings/momentum_11.rst.txt
:orphan:

.. _momentum_11:

momentum
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.momentum_11
    :show-inheritance:

.. rubric:: Attributes

========================================================================   ======================================================

Attribute                                                                                                                 Summary

========================================================================   ======================================================
:ref:`wall_motion <wall_motion>`                                                                                     Wall Motion.

:ref:`moving <moving>`                                                                            Apply a velocity to this wall?.

:ref:`relative <relative>`                                                     Define wall motion relative to adjacent cell zone.

:ref:`rotating <rotating>`                                                              Apply a rotational velocity to this wall.

:ref:`components <components_1>`                                                                 Define wall velocity components.

:ref:`velocity_spec <velocity_spec>`                                                                   Motion specification type.

:ref:`speed <speed>`                                                                                          Velocity Magnitude.

:ref:`rotation_speed <rotation_speed>`                                                                            Rotation Speed.

:ref:`rotation_axis_origin <rotation_axis_origin>`                                               Rotation axis origin components.

:ref:`rotation_axis_direction <rotation_axis_direction>`                                      Rotation axis direction components.

:ref:`direction <direction_2>`                                                                       Wall translation components.

:ref:`velocity_components <velocity_components>`                                                             Velocity components.

:ref:`shear_condition <shear_condition>`                                                                         Shear Condition.

:ref:`fsi_interface <fsi_interface>`                                                                               FSI Interface.

:ref:`periodic_displacement <periodic_displacement>`                                            Periodic displacement components.

:ref:`periodic_imaginary_displacement <periodic_imaginary_displacement>`              Periodic imaginary displacement components.

:ref:`frequency <frequency>`                                                                  Frequency of Periodic Displacement.

:ref:`amplitude <amplitude_1>`                                                                Amplitude of Periodic Displacement.

:ref:`nodal_diam <nodal_diam>`                                                          Nodal Diameter for Periodic Displacement.

:ref:`passage_number <passage_number>`                                                  Passage Number for Periodic Displacement.

:ref:`fwd <fwd>`                                                                             Forward or Backward Travelling Wave.

:ref:`aero <aero>`                                                                                Enable Aerodamping Monitoring?.

:ref:`cmplx <cmplx>`                                                                                         Complex Mode Shape?.

:ref:`norm <norm>`                                                                                           Normalized profile?.

:ref:`method <method_5>`                                                                                  Travelling Wave Method.

:ref:`shear_stress <shear_stress>`                                                                       Shear stress components.

:ref:`fslip <fslip>`                                                                                              Fslip constant.

:ref:`eslip <eslip>`                                                                                              Eslip constant.

:ref:`surface_tension_gradient <surface_tension_gradient>`                                              Surface Tension Gradient.

:ref:`specified_shear <specified_shear>`                                                                           Shear stress?.

:ref:`specularity_coeff <specularity_coeff>`                                                             Specularity Coefficient.

:ref:`mom_accommodation_coeff <mom_accommodation_coeff>`                                      Momentum Accommodation Coefficient.

========================================================================   ======================================================

.. rubric:: Included in:

======================================   ======================================

Parent                                                                  Summary

======================================   ======================================
:ref:`wall_child <wall_child>`                     'child_object_type' of wall.

:ref:`phase_25_child <phase_25_child>`            'child_object_type' of phase.

:ref:`settings_28 <settings_28>`             Domain name to define settings on.

:ref:`phase_51_child <phase_51_child>`            'child_object_type' of phase.

======================================   ======================================

